complete first implementation

--- a/dist.ini
+++ b/dist.ini
@@ -33,9 +33,10 @@ Test::More                    = 0.96
 ; for runtime
 perl                          = 5.010000
 ; to specify which specification version we're following
-;Data::Clone                   = 0
+Data::Clone                   = 0
+DateTime                      = 0
 Sub::Spec                     = 0.13
-Sub::Spec::Gen::ReadTable     = 0
+Sub::Spec::Gen::ReadTable     = 0.02
 
 [Run::Release]
 ;notexist_fatal = 0
