disable Twitter plugin

--- a/dist.ini
+++ b/dist.ini
@@ -1,43 +1,43 @@
-name    = Calendar-Indonesia-Holiday
-version = 0.02
-author  = Steven Haryanto <stevenharyanto@gmail.com>
-license = Perl_5
-copyright_holder = Steven Haryanto
+name=Calendar-Indonesia-Holiday
+version=0.02
+author=Steven Haryanto <stevenharyanto@gmail.com>
+license=Perl_5
+copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage    = http://search.cpan.org/dist/Calendar-Indonesia-Holiday/
-repository  = http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
+homepage=http://search.cpan.org/dist/Calendar-Indonesia-Holiday/
+repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 
 [@Filter]
-bundle = @Classic
-remove = MakeMaker
-remove = PodVersion
+bundle=@Classic
+remove=MakeMaker
+remove=PodVersion
+
 [ModuleBuild]
 
 [ReadmeFromPod]
+
 [PodWeaver]
+
 [CheckChangeLog]
 
 [CompileTests]
+
 [InstallRelease]
-install_command = cpanm -n .
-[Twitter]
-hash_tags = #perl #cpan
-url_shortener = Metamark
+install_command=cpanm -n .
 
 ;[@Git]
 [Prereqs]
 ; for testing
-Test::More                    = 0.96
-
+Test::More=0.96
 ; for runtime
-perl                          = 5.010000
+perl=5.010000
 ; to specify which specification version we're following
-Data::Clone                   = 0
-DateTime                      = 0
-Sub::Spec                     = 0.13
-Sub::Spec::Gen::ReadTable     = 0.02
+Data::Clone=0
+DateTime=0
+Sub::Spec=0.13
+Sub::Spec::Gen::ReadTable=0.02
 
 [Run::Release]
 ;notexist_fatal = 0
-run = archive-perl-release %s
+run=archive-perl-release %s
