Add command-line script for list_id_holidays

--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,8 @@ Data::Clone=0
 DateTime=0
 Sub::Spec=0.13
 Sub::Spec::Gen::ReadTable=0.02
+; for example script
+Sub::Spec::CmdLine=0
 
 [Run::Release]
 ;notexist_fatal = 0
