--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,9 @@ repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 bundle=@Classic
 remove=MakeMaker
 remove=PodVersion
+remove=PkgVersion
+
+[OurPkgVersion]
 
 [ModuleBuild]
 
