Replace Sub::Spec with Rinci/Perinci

--- a/dist.ini
+++ b/dist.ini
@@ -31,17 +31,20 @@ install_command=cpanm -n .
 
 ;[@Git]
 [Prereqs]
-; for testing
+;spec
+Rinci=0.13
+
+;testing
 Test::More=0.96
-; for runtime
+
+;runtime
 perl=5.010000
-; to specify which specification version we're following
 Data::Clone=0
 DateTime=0
-Sub::Spec=0.13
-Sub::Spec::Gen::ReadTable=0.02
-; for example script
-Sub::Spec::CmdLine=0
+Perinci::Sub::Gen::AccessTable=0.03
+
+;example script
+Perinci::CmdLine=0
 
 [Run::Release]
 ;notexist_fatal = 0
