--- a/dist.ini
+++ b/dist.ini
@@ -8,44 +8,19 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Calendar-Indonesia-Holiday/
 repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 
-[@Filter]
-bundle=@Classic
-remove=MakeMaker
-remove=PodVersion
-remove=PkgVersion
+[@SHARYANTO]
 
-[OurPkgVersion]
-
-[ModuleBuild]
-
-[ReadmeFromPod]
-
-[PodWeaver]
-
-[CheckChangeLog]
-
-[Test::Compile]
-
-[InstallRelease]
-install_command=cpanm -n .
-
-;[@Git]
 [Prereqs]
 ;spec
 Rinci=0.13
 
-;testing
-Test::More=0.96
-
-;runtime
 perl=5.010000
 Data::Clone=0
 DateTime=0
-Perinci::Sub::Gen::AccessTable=0.08
+Perinci::Sub::Gen::AccessTable=0.11
 
 ;example script
 Perinci::CmdLine=0
 
-[Run::Release]
-;notexist_fatal = 0
-run=archive-perl-release %s
+[Prereqs / TestRequires]
+Test::More=0.96
