--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ perl=5.010000
 Data::Clone=0
 DateTime=0
 Perinci::Sub::Gen::AccessTable=0.15
+Perinci::Sub::Util=0
 
 ;example script
 Perinci::CmdLine=0
