--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.11
+version=0.12
 
 name=Calendar-Indonesia-Holiday
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -12,12 +12,13 @@ repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 [@SHARYANTO]
 
 [Prereqs]
-;spec
+;!lint-prereqs assume-used # spec
 Rinci=0.13
 
 perl=5.010000
 Data::Clone=0
 DateTime=0
+Log::Any=0
 Perinci::Sub::Gen::AccessTable=0.16
 Perinci::Sub::Util=0.32
 
