Add Labor Day (holiday since 2014), add tentative 2014 holidays

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,7 @@ repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 Rinci=0.13
 
 perl=5.010000
+experimental=0
 Data::Clone=0
 DateTime=0
 Log::Any=0
