dist: dzil: Force @SHARYANTO version (inspired by chorny)

--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ homepage=http://search.cpan.org/dist/Calendar-Indonesia-Holiday/
 repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 
 [@SHARYANTO]
+:version=0.09
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
