dist: dzil: rename bundle SHARYANTO -> Author::SHARYANTO

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Calendar-Indonesia-Holiday/
 repository=http://github.com/sharyanto/perl-Calendar-Indonesia-Holiday
 
-[@SHARYANTO]
+[@Author::SHARYANTO]
 :version=0.09
 
 [Prereqs]
