--- a/dist.ini
+++ b/dist.ini
@@ -14,8 +14,8 @@ Rinci=0.13
 
 perl=5.010001
 experimental=0
-Data::Clone=0
 DateTime=0
+Function::Fallback::CoreOrPP=0
 Log::Any=0
 Perinci::Sub::Gen::AccessTable=0.16
 Perinci::Sub::Util=0.32
