--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.18
+version=0.19
 
 name=Calendar-Indonesia-Holiday
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -22,6 +22,11 @@ Perinci::Sub::Util=0.32
 
 ;example script
 Perinci::CmdLine=1.06
+
+;ansitable style set
+List::MoreUtils=0
+Moo=0
+namespace::clean=0
 
 [Prereqs / TestRequires]
 Test::More=0.96
