Bugfix: removed prereq by mistake

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ Rinci=0.13
 perl=5.010001
 experimental=0
 DateTime=0
+Function::Fallback::CoreOrPP=0
 Log::Any=0
 Perinci::Sub::Gen::AccessTable=0.37
 Perinci::Sub::Util=0.38
