--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ copyright_holder=Steven Haryanto
 
 [Rinci::ScriptFromFunc]
 script= func=/Calendar/Indonesia/Holiday/list_id_holidays
-snippet_before_instantiate_cmdline = $ENV{ANSITABLE_STYLE_SETS} //= '[["Calendar::Indonesia::Holiday::HolidayType",{"holiday_bgcolor":"330000", "joint_leave_bgcolor":"333300"}]]'
+snippet_before_instantiate_cmdline = $ENV{ANSITABLE_STYLE_SETS} //= '[["Calendar::Indonesia::Holiday::HolidayType",{"holiday_bgcolor":"330000", "joint_leave_bgcolor":"333300"}]]';
 script= func=/Calendar/Indonesia/Holiday/list_id_workdays
 
 [@Author::SHARYANTO]
