[dist] Change dzil/pw plugin bundle

--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,13 @@
 version=0.23
 
 name=Calendar-Indonesia-Holiday
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
 [Rinci::ScriptFromFunc]
 script= func=/Calendar/Indonesia/Holiday/list_id_holidays
 snippet_before_instantiate_cmdline = $ENV{ANSITABLE_STYLE_SETS} //= '[["Calendar::Indonesia::Holiday::HolidayType",{"holiday_bgcolor":"330000", "joint_leave_bgcolor":"333300"}]]';
 script= func=/Calendar/Indonesia/Holiday/list_id_workdays
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs]
