Replace Log::Any with Log::Any::IfLOG

--- a/dist.ini
+++ b/dist.ini
@@ -12,13 +12,13 @@ script= func=/Calendar/Indonesia/Holiday/list_id_workdays
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
-Rinci=0.13
+Rinci=1.1.0
 
 perl=5.010001
 experimental=0
 DateTime=0
 Function::Fallback::CoreOrPP=0
-Log::Any=0
+Log::Any::IfLOG=0
 Perinci::Sub::Gen::AccessTable=0.37
 Perinci::Sub::Util=0.38
 
