[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,6 @@ name=Calendar-Indonesia-Holiday
 :version=0.23
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-
 perl=5.010001
 experimental=0
 DateTime=0
@@ -19,3 +16,7 @@ Perinci::Sub::Util=0.38
 
 [Prereqs / TestRequires]
 Test::More=0.96
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.0
