Update prereq minimum version Perinci::Sub::Gen::AccessTable to 0.55 (incompatible with previous version)

--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,16 @@ name=Calendar-Indonesia-Holiday
 
 [Prereqs]
 perl=5.010001
+
 experimental=0
+strict=0
+warnings=0
+
 DateTime=0
+Exporter=0
 Function::Fallback::CoreOrPP=0
 Log::Any::IfLOG=0.07
-Perinci::Sub::Gen::AccessTable=0.37
+Perinci::Sub::Gen::AccessTable=0.55
 Perinci::Sub::Util=0.38
 
 [Prereqs / TestRequires]
