[dist] Move spec prereq from DevelopRecommends to DevelopSuggests with _SPEC:: prefix

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,5 @@ Perinci::Sub::Util=0.38
 [Prereqs / TestRequires]
 Test::More=0.96
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
