[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -22,5 +22,7 @@ Perinci::Sub::Util=0.38
 [Prereqs / TestRequires]
 Test::More=0.96
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
