[doc] Document the calendar years supported by this module in the POD

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,9 @@ version=0.345
 
 name=Calendar-Indonesia-Holiday
 
+[InsertCodeOutput]
+make_verbatim=0
+
 [@Author::PERLANCAR]
 :version=0.606
 
@@ -29,4 +32,3 @@ Test::More=0.98
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.99
-
