--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,9 @@ version=0.352
 
 name=Calendar-Indonesia-Holiday
 
+[PruneFiles / PruneFiles additional]
+filename = archive
+
 [InsertCodeOutput]
 make_verbatim=0
 
@@ -31,4 +34,3 @@ Test::More=0.98
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.102
-
